<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>jomu</groupId>
		<artifactId>instrument-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
		
	<artifactId>instrument</artifactId>
	
	<name>instrument</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <compiler-plugin.version>3.8.1</compiler-plugin.version>
	    <maven.compiler.parameters>true</maven.compiler.parameters>
   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
	    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
	    <quarkus.platform.version>2.10.0.Final</quarkus.platform.version>
   		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
   		<client.version>1.0.0</client.version>
        <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
   </properties>
	
	<dependencies>
		<dependency>
	      <groupId>io.quarkus</groupId>
	      <artifactId>quarkus-arc</artifactId>
          <version>${quarkus.platform.version}</version>
	      <scope>provided</scope>
	    </dependency>
	    <dependency>
	      <groupId>io.quarkus</groupId>
	      <artifactId>quarkus-resteasy</artifactId>
           <version>${quarkus.platform.version}</version>
	      <scope>provided</scope>
	    </dependency>
	    <dependency>
	      <groupId>io.quarkus</groupId>
	      <artifactId>quarkus-junit5</artifactId>
	      <version>${quarkus.platform.version}</version>
	      <scope>test</scope>
	    </dependency>
	   <dependency>
		    <groupId>org.openjdk.jmc</groupId>
		    <artifactId>common</artifactId>
		    <version>8.3.0</version>
		</dependency>   	
		<dependency>
		    <groupId>io.quarkus</groupId>
		    <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
    	    <version>2.15.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
		    <groupId>com.formdev</groupId>
		    <artifactId>flatlaf</artifactId>
		    <version>2.0.1</version>
		</dependency>
		<dependency>
  		<groupId>com.formdev</groupId>
  			<artifactId>flatlaf-intellij-themes</artifactId>
		  <version>2.6</version>
		</dependency>
		<dependency>
		  <groupId>be.tarsos.dsp</groupId>
		  <artifactId>core</artifactId>
		  <version>2.5</version>
		</dependency>
		<dependency>
		  <groupId>be.tarsos.dsp</groupId>
		  <artifactId>jvm</artifactId>
		  <version>2.5</version>
		</dependency>
		<dependency>
		  <groupId>com.googlecode.soundlibs</groupId>
		  <artifactId>tritonus-share</artifactId>
		  <version>0.3.7.4</version>
		</dependency>
		
		<dependency>
		  <groupId>com.googlecode.soundlibs</groupId>
		  <artifactId>tritonus-all</artifactId>
		  <version>0.3.7.2</version>
		</dependency>
		
		<dependency>
		  <groupId>com.googlecode.soundlibs</groupId>
		  <artifactId>jlayer</artifactId>
		  <version>1.0.1.4</version>
		</dependency>
		
		<dependency>
		  <groupId>com.googlecode.soundlibs</groupId>
		  <artifactId>mp3spi</artifactId>
		  <version>1.9.5.4</version>
		</dependency>
		
		<dependency>
		  <groupId>com.googlecode.soundlibs</groupId>
		  <artifactId>jorbis</artifactId>
		  <version>0.0.17.4</version>
		</dependency>
		
		<dependency>
		  <groupId>com.googlecode.soundlibs</groupId>
		  <artifactId>vorbisspi</artifactId>
		  <version>1.0.3.3</version>
		</dependency>

		<!--dependency>
			<groupId>jomuddlo</groupId>
			<artifactId>tarsos</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/library/TarsosDSP-2.4.jar</systemPath>
		</dependency-->
	</dependencies>

	<build>
		<plugins>
		      <plugin>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>${compiler-plugin.version}</version>
		        <configuration>
		          <parameters>${maven.compiler.parameters}</parameters>
		          <source>11</source>
				  <target>11</target>
			    </configuration>
		      </plugin>
		      <plugin>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>${surefire-plugin.version}</version>
		        <configuration>
		            <systemPropertyVariables>
		  		        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
		        	    <maven.home>${maven.home}</maven.home>
		          </systemPropertyVariables>
		        </configuration>
		      </plugin>
		      <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.dlsc.jpackagefx.App</mainClass>
                </configuration>
            </plugin>
		</plugins>
	</build>
	<profiles>
	    <profile>
	        <id>native</id>
	        <properties>
	            <quarkus.package.type>native</quarkus.package.type>
	        </properties>
	         <activation>
	        <property>
	          <name>native</name>
	        </property>
	      </activation>
	    </profile>
	 
	    <profile>
            <id>build-mac</id>

            <activation>
                <os><family>mac</family></os>
                <property>
		          <name>jpackage</name>
	    	    </property>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <version>${exec.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>Build Native Mac App</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <executable>./build_app_mac.sh</executable>
                            <environmentVariables>
                                <APP_VERSION>
                                    ${client.version}
                                </APP_VERSION>
                                <PROJECT_VERSION>
                                    ${project.version}
                                </PROJECT_VERSION>
                            </environmentVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>build-linux</id>
            <activation>
                <os><family>linux</family></os>
                <property>
		          <name>jpackage</name>
	    	    </property>
            </activation>

            <build>
                <plugins>
					<plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <version>${exec.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>Build Native Linux App</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <executable>./build_app_linux.sh</executable>
                            <environmentVariables>
                                <APP_VERSION>
                                    ${client.version}
                                </APP_VERSION>
                                <PROJECT_VERSION>
                                    ${project.version}
                                </PROJECT_VERSION>
                            </environmentVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>build-windows</id>
            <activation>
                <os><family>windows</family></os>
                <property>
		          <name>jpackage</name>
	    	    </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <version>${exec.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>Build Native Windows App</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <executable>build_app_windows.bat</executable>
                            <environmentVariables>
                                <APP_VERSION>
                                    ${client.version}
                                </APP_VERSION>
                                <PROJECT_VERSION>
                                    ${project.version}
                                </PROJECT_VERSION>
                            </environmentVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

	  </profiles>
	<repositories>
		<repository>
			<id>clojars_repo</id>
			<url>https://clojars.org/repo/</url>
		</repository>
		<repository>
		  <id>be.0110.repo-releases</id>
		  <name>0110.be repository</name>
		  <url>https://mvn.0110.be/releases</url>
		</repository>
	</repositories>
</project>
